# rust-api-tweets

./: .env  Cargo.toml
migrations/2023-08-27-045020_create_tweets/: up.sql
migrations/2023-08-27-045336_create_likes/: up.sql
src/: likes.rs  main.rs  schema.rs  tweets.rs
